--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <script src="./script.js"></script>
+    <script src="./script.js" defer></script>
     <title>Registration form</title>
 </head>
 <body>
     <div class="content">
         <div class="left">
-            <img src="./background.jpg" alt="A picture of a palm tree">
             <div class="logo">Las <img src="./palm2.png" alt="Palm logo" class="palm">
             Marahitas</div>
         </div>
@@ -23,33 +22,37 @@
                 <h4>Let us take you to the most beautiful places
                     in the world.
                 </h4>
-        </div>
-            <div class="formDiv">
-                <form action="#" method="post">
-                    <legend>Register today!</legend>
-                    <div>
-                        <div>
-                            <label for="first_name">First name:</label>
-                            <input required id="first_name" type="text" name="first_name">
-                            <label for="last_name">Last name:</label>
-                            <input required id="last_name" type="text" name="last_name">
-                        </div>
-                        <div>
-                            <label for="email">E-mail adress:</label>
-                            <input required id="email" type="email" name="email">
-                            <label for="phone">Phone number:</label>
-                            <input required id="phone" type="text" name="phone" pattern="\d+">
-                        </div>
-                        <div>
-                            <label for="password1">Password:</label>
-                            <input required id="password1" type="password" name="password">
-                            <label for="password2">Repeat password:</label>
-                            <input required id="password2" type="password" name="password_repeated">
-                        </div>
-                    </div>
-                </form>
             </div>
-            <div></div>
+                <div class="formDiv">
+                    <form action="#" method="post" id="registrationForm">
+                        <legend>Register today!</legend>
+                        <div>
+                            <div>
+                                <label for="first_name">First name:</label>
+                                <input required id="first_name" type="text" name="first_name">
+                                <label for="last_name">Last name:</label>
+                                <input required id="last_name" type="text" name="last_name">
+                            </div>
+                            <div>
+                                <label for="email">E-mail adress:</label>
+                                <input required id="email" type="email" name="email">
+                                <label for="phone">Phone number:</label>
+                                <input required id="phone" type="text" name="phone" pattern="\d+">
+                            </div>
+                            <div>
+                                <label for="password1">Password:</label>
+                                <input required id="password1" type="password" name="password">
+                                <label for="password2">Repeat password:</label>
+                                <input required id="password2" type="password" name="password_repeated">
+                                <span class="error_message">Passwords do not match.</span>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            <div>
+                <button class="submit_button" form="registrationForm">Create account</button>
+                <h4>If you already have an account: <a href="#">Sign in</a></h4>
+            </div>
         </div>
     </div>
 </body>
