--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                                 <label for="phone">Phone number:</label>
                                 <input required id="phone" type="text" name="phone" pattern="\d+">
                             </div>
-                            <div>
+                            <div class="last">
                                 <label for="password1">Password:</label>
                                 <input required id="password1" type="password" name="password">
                                 <label for="password2">Repeat password:</label>
